@@ -1,3 +1,7 @@
+  - add $smarty->security_settings['ALLOW_CONSTANTS']. note: this
+    defaults to false which means you have to allow them explicitely
+    in your secured templates from now on! (messju)
+
 Version 2.6.4 (Sept 7, 2004)
 ----------------------------
 
